# cyber-arcade-verse-rally

./: .env  Anchor.toml  README.md  index.html  package-lock.json  package.json  robots.txt  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
programs/avatar-metaverse/: Cargo.toml
programs/avatar-metaverse/src/: lib.rs
programs/node-system/: Cargo.toml
programs/node-system/src/: lib.rs
programs/voting-dao/: Cargo.toml
soroban-contracts/: Cargo.toml  README.md
soroban-contracts/cctr-token/: Cargo.toml
soroban-contracts/cctr-token/src/: lib.rs
soroban-contracts/compute-credits/: Cargo.toml
soroban-contracts/compute-credits/src/: lib.rs
soroban-contracts/host-rewards/: Cargo.toml
soroban-contracts/host-rewards/src/: lib.rs
soroban-contracts/liquidity-pool/: Cargo.toml
soroban-contracts/liquidity-pool/src/: lib.rs
soroban-contracts/nft-pass/: Cargo.toml
soroban-contracts/nft-pass/src/: lib.rs
soroban-contracts/node-system/: Cargo.toml
soroban-contracts/node-system/src/: lib.rs
soroban-contracts/results-attestation/: Cargo.toml
soroban-contracts/results-attestation/src/: lib.rs
soroban-contracts/rewards-vault/: Cargo.toml
soroban-contracts/rewards-vault/src/: lib.rs
soroban-contracts/tournament-raffle/: Cargo.toml
soroban-contracts/tournament-raffle/src/: lib.rs
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AIGamingCoach.tsx  AchievementNotification.tsx  AchievementSystem.tsx  ArcadeCabinetLogo.tsx  ArcadeScreenAnimation.tsx  ArcadeTetris.tsx  BlockchainIntegration.tsx  CCTRStaking.tsx  CCTRTokenCreator.tsx  CartDrawer.tsx  ChestOpeningAnimation.tsx  ClaimPassButton.tsx  CommunityHub.tsx  CommunityMarketplace.tsx  CreditsRewardsShowcase.tsx  CyberChestPicker.tsx  CyberGamesSection.tsx  CyberMatchGame.tsx  CyberMusicPlayer.tsx  CyberSlotsMachine.css  CyberSlotsMachine.tsx  (+74 more)
supabase/: config.toml
tests/: voting-dao.ts
(+407 files in other folders)
