[workspace]
resolver = "2"
members = [
    "cctr-token",
    "node-system",
    "liquidity-pool",
    "tournament-raffle",
    "nft-pass",
    "rewards-vault",
    "results-attestation",
    "compute-credits",
    "host-rewards",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
