
[package]
name = "avatar-metaverse"
version = "0.1.0"
description = "Avatar NFT Metaverse on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "avatar_metaverse"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
