[package]
name = "node-system"
version = "0.1.0"
description = "Solana Node System Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "node_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"